--- a/.chezmoiscripts/windows/run_onchange_after_nvim.ps1.tmpl
+++ b/.chezmoiscripts/windows/run_onchange_after_nvim.ps1.tmpl
@@ -1,2 +1,2 @@
-nvim +":Lazy install" --headless
-nvim +":MasonInstall" --headless
+#nvim +":Lazy install" --headless
+#nvim +":MasonInstall" --headless
