--- a/.chezmoiscripts/linux/run_onchange_after_nvim.sh.tmpl
+++ b/.chezmoiscripts/linux/run_onchange_after_nvim.sh.tmpl
@@ -1,4 +1,4 @@
 #!/bin/sh
 
-nvim +":Lazy install" --headless
-nvim +":MasonInstall" --headless
+nvim +":Lazy! sync" +qa --headless
+nvim +":MasonUpdate" +qa --headless
