Remove nil on windows

--- a/dot_config/nvim/lua/plugins/mason-lspconfig.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/mason-lspconfig.lua.tmpl
@@ -15,7 +15,9 @@ return {
 			"html", -- html
 			"ts_ls", -- typescript, javascript
 			"lua_ls", -- lua
+			{{- if ne .chezmoi.os "windows" }}
 			"nil_ls", -- nix
+			{{- end }}
 			"ruff", -- python
 			"rust_analyzer", -- rust
 			"bzl", -- bazel/skylark
