--- a/dot_config/nvim/lua/plugins/mason-lspconfig.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/mason-lspconfig.lua.tmpl
@@ -31,6 +31,7 @@ return {
 			"grammarly", -- text, markdown
 			"powershell_es", -- powershell
 			"jsonls", -- json
+			"tailwindcss", -- css
 		}
 	}
 }
