Update ignore for windows paths that were added

--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -1,6 +1,10 @@
 {{ if ne .chezmoi.os "windows" }}
 AppData
 .chezmoiscripts/windows/**
+readonly_Documents/**
+readonly_OneDrive/**
+Documents
+OneDrive
 {{ end }}
 
 {{ if ne .chezmoi.os "linux" }}
