Switch to blink-cmp

--- a/.chezmoiscripts/windows/run_onchange_before_a-winget.cmd.tmpl
+++ b/.chezmoiscripts/windows/run_onchange_before_a-winget.cmd.tmpl
@@ -15,5 +15,6 @@ winget install -e --silent --accept-source-agreements --accept-package-agreement
 winget install -e --silent --accept-source-agreements --accept-package-agreements --disable-interactivity Git.Git -s winget
 winget install -e --silent --accept-source-agreements --accept-package-agreements --disable-interactivity 7zip.7zip -s winget
 winget install -e --silent --accept-source-agreements --accept-package-agreements --disable-interactivity BurntSushi.ripgrep.MSVC -s winget
+winget install -e --silent --accept-source-agreements --accept-package-agreements --disable-interactivity ezwinports.make -s winget
 
 exit /b 0
