--- a/dot_config/nvim/lua/plugins/mason-lspconfig.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/mason-lspconfig.lua.tmpl
@@ -21,6 +21,8 @@ return {
 			"nil_ls", -- nix
 			{{- end }}
 			"powershell_es", -- powershell
+            --"prettierd",
+            --"prettier",
 			"ruff", -- python
 			"rust_analyzer", -- rust
 			"tailwindcss", -- css
