Switch to native langservers for python and ts

--- a/dot_config/nvim/lua/plugins/mason-lspconfig.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/mason-lspconfig.lua.tmpl
@@ -6,7 +6,6 @@ return {
 	},
 	opts = {
 		ensure_installed = {
-			"basedpyright", -- python
 			"bashls", -- bash
 			"buf_ls", -- protobuf
 			"bzl", -- bazel/skylark
@@ -29,7 +28,8 @@ return {
 			"taplo", -- toml
 			"terraformls", -- terraform
 			"tflint", -- terraform
-			"ts_ls", -- typescript, javascript
+			"tsgo", -- typescript, javascript
+            "ty", -- python
 			"vimls", -- vimscript
 			"yamlls", -- yaml
 			"zls", -- zig
