Turn on copilot next edit prediction.  Add more hotkeys

--- a/dot_config/nvim/lua/plugins/mason-lspconfig.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/mason-lspconfig.lua.tmpl
@@ -20,8 +20,8 @@ return {
 			"nil_ls", -- nix
 			{{- end }}
 			"powershell_es", -- powershell
-            --"prettierd",
-            --"prettier",
+            "prettierd",
+            "prettier",
 			"ruff", -- python
 			"rust_analyzer", -- rust
 			"tailwindcss", -- css
