Add sidekick, begin

--- a/dot_config/nvim/lua/plugins/mason-lspconfig.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/mason-lspconfig.lua.tmpl
@@ -3,6 +3,7 @@ return {
 	event = "VeryLazy",
 	 dependencies = {
 		"williamboman/mason.nvim",
+        "neovim/nvim-lspconfig",
 	},
 	opts = {
 		ensure_installed = {
