--- a/dot_config/nvim/lua/plugins/avante.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/avante.lua.tmpl
@@ -21,15 +21,19 @@ return {
     -- for example
 	  auto_suggestions_provider = "claude",
 	  cursor_applying_provider = nil, -- The provider used in the applying phase of Cursor Planning Mode, defaults to nil, when nil uses Config.provider as the provider for the applying phase
+        providers = {
 	  claude = {
 		endpoint = "https://api.anthropic.com",
 		model = "claude-3-5-sonnet-20241022",
-		temperature = 0,
-		max_tokens = 4096,
+        extra_request_body = {
+            temperature = 0,
+            max_tokens = 4096,
+        },
 	  },
 		behavior = {
 			auto_suggestions = false,
 		},
+        },
 	},
   -- if you want to build from source then do `make BUILD_FROM_SOURCE=true`
 {{- if ne .chezmoi.os "windows" }}
@@ -48,6 +52,7 @@ return {
     "ibhagwan/fzf-lua", -- for file_selector provider fzf
     "nvim-tree/nvim-web-devicons", -- or echasnovski/mini.icons
     "zbirenbaum/copilot.lua", -- for providers='copilot'
+    "hrsh7th/nvim-cmp", -- autocompletion for avante commands and mentions
     {
       -- support for image pasting
       "HakonHarnes/img-clip.nvim",
