--- a/dot_config/nvim/lua/plugins/avante.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/avante.lua.tmpl
@@ -47,10 +47,10 @@ return {
     "nvim-lua/plenary.nvim",
     "MunifTanjim/nui.nvim",
     --- The below dependencies are optional,
-    "echasnovski/mini.pick", -- for file_selector provider mini.pick
+    "nvim-mini/mini.pick", -- for file_selector provider mini.pick
     "nvim-telescope/telescope.nvim", -- for file_selector provider telescope
     "ibhagwan/fzf-lua", -- for file_selector provider fzf
-    "nvim-tree/nvim-web-devicons", -- or echasnovski/mini.icons
+    "nvim-tree/nvim-web-devicons", -- or nvim-mini/mini.icons
     "zbirenbaum/copilot.lua", -- for providers='copilot'
     "hrsh7th/nvim-cmp", -- autocompletion for avante commands and mentions
     {
