--- a/dot_config/nvim/lua/plugins/mason-lspconfig.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/mason-lspconfig.lua.tmpl
@@ -168,7 +168,7 @@ return {
                         },
                     },
         })
-        vim.lsp.config('lua_lus', {
+        vim.lsp.config('lua_ls', {
                     settings = {
                         Lua = {
                             -- make the language server recognize "vim" global
