--- a/dot_config/nvim/lua/plugins/mason-lspconfig.lua.tmpl
+++ b/dot_config/nvim/lua/plugins/mason-lspconfig.lua.tmpl
@@ -6,7 +6,7 @@ return {
         "neovim/nvim-lspconfig",
 	},
     config = function()
-        require("mason").setup({PATH = "append"})
+        require("mason").setup()
         require("mason-lspconfig").setup({
             ensure_installed = {
                 "bashls", -- bash
